--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>Flask + OAuth 2.0 Demo</title>
+    <title>CraneTrips Identity Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Flask + OAuth 2.0 Demo</a>
+        <a class="navbar-brand" href="#">CraneTrips Identity Portal</a>
       </div>
     </nav>
     <div class="container mt-3">
